--- a/arthurpage.html
+++ b/arthurpage.html
@@ -1,1 +1,74 @@
-
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arthur's Cat Breeds</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
+        header {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 1em 0;
+        }
+        main {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 2em;
+        }
+        .cat-breed {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin: 1em;
+            width: 300px;
+            text-align: center;
+            overflow: hidden;
+        }
+        .cat-breed img {
+            width: 100%;
+            height: auto;
+        }
+        .cat-breed h2 {
+            font-size: 1.5em;
+            margin: 0.5em 0;
+        }
+        .cat-breed p {
+            padding: 0 1em 1em;
+            font-size: 1em;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Arthur's Cat Breeds</h1>
+    </header>
+    <main>
+        <div class="cat-breed">
+            <img src="images/siamese.jpg" alt="Siamese Cat">
+            <h2>Siamois</h2>
+            <p>Le Siamois est une race de chat originaire de Thaïlande, connue pour ses yeux bleus perçants et son pelage court et soyeux.</p>
+        </div>
+        <div class="cat-breed">
+            <img src="images/persian.jpg" alt="Persian Cat">
+            <h2>Persan</h2>
+            <p>Le Persan est une race de chat avec un pelage long et dense, et une personnalité calme et affectueuse.</p>
+        </div>
+        <div class="cat-breed">
+            <img src="images/maine_coon.jpg" alt="Maine Coon Cat">
+            <h2>Maine Coon</h2>
+            <p>Le Maine Coon est l'une des plus grandes races de chats domestiques, célèbre pour sa taille imposante et son pelage épais.</p>
+        </div>
+        <!-- Ajoutez d'autres races de chats ici -->
+    </main>
+</body>
+</html>
