Avec poisson d'avril

--- a/loanpage.html
+++ b/loanpage.html
@@ -63,6 +63,7 @@
         <a href="#fario">Truite fario</a>
         <a href="#arc-en-ciel">Truite arc-en-ciel</a>
         <a href="#de-mer">Truite de mer</a>
+        <a href="#poisson-d-avril">Poisson d'avril</a>
     </nav>
     <div class="container">
         <div id="fario" class="species">
@@ -86,6 +87,15 @@
             <h2>Truite de mer</h2>
             <p><strong>Lieu de vie :</strong> Zones côtières et estuaires de l'Atlantique Nord.</p>
             <p><strong>Particularités :</strong> La truite de mer migre entre les eaux douces et salées. Elle est appréciée pour sa chair délicate et sa taille impressionnante par rapport aux autres truites.</p>
+            <div class="clear"></div>
+        </div>
+
+        <div id="poisson-d-avril" class="species">
+            <img src="poisson_d_avril.jpg" alt="Poisson d'avril">
+            <h2>Truite du poisson d'avril</h2>
+            <p><strong>Lieu de vie :</strong> Partout où les blagues sont bien accueillies.</p>
+            <p><strong>Particularités :</strong> La truite du poisson d'avril est une espèce très rare, connue pour n'apparaître que le 1er avril. Elle est souvent utilisée pour faire des blagues et des farces.</p>
+            <p><strong>Blague :</strong> Pourquoi les truites ne jouent-elles jamais à cache-cache le 1er avril ? Parce qu'elles détestent être "poissonnée" !</p>
             <div class="clear"></div>
         </div>
     </div>
