images en ligne

--- a/loanpage.html
+++ b/loanpage.html
@@ -67,7 +67,7 @@
     </nav>
     <div class="container">
         <div id="fario" class="species">
-            <img src="truite_fario.jpg" alt="Truite fario">
+            <img src="https://www.fishbase.se/images/species/Truff_m0.jpg" alt="Truite fario">
             <h2>Truite fario</h2>
             <p><strong>Lieu de vie :</strong> Rivières et torrents d'Europe.</p>
             <p><strong>Particularités :</strong> La truite fario est caractérisée par sa robe brune avec des points rouges et noirs. Elle est très prisée des pêcheurs pour sa combativité.</p>
@@ -75,7 +75,7 @@
         </div>
         
         <div id="arc-en-ciel" class="species">
-            <img src="truite_arc_en_ciel.jpg" alt="Truite arc-en-ciel">
+            <img src="https://www.fishbase.se/images/species/Oncorhynchus_mykiss_2.jpg" alt="Truite arc-en-ciel">
             <h2>Truite arc-en-ciel</h2>
             <p><strong>Lieu de vie :</strong> Originaire d'Amérique du Nord, elle est maintenant présente dans le monde entier.</p>
             <p><strong>Particularités :</strong> Cette espèce est reconnaissable à sa bande colorée le long de son flanc. Elle est souvent utilisée pour l'élevage en pisciculture.</p>
@@ -83,7 +83,7 @@
         </div>
         
         <div id="de-mer" class="species">
-            <img src="truite_de_mer.jpg" alt="Truite de mer">
+            <img src="https://www.fishbase.se/images/species/Salmo_trutta.jpg" alt="Truite de mer">
             <h2>Truite de mer</h2>
             <p><strong>Lieu de vie :</strong> Zones côtières et estuaires de l'Atlantique Nord.</p>
             <p><strong>Particularités :</strong> La truite de mer migre entre les eaux douces et salées. Elle est appréciée pour sa chair délicate et sa taille impressionnante par rapport aux autres truites.</p>
@@ -91,7 +91,7 @@
         </div>
 
         <div id="poisson-d-avril" class="species">
-            <img src="poisson_d_avril.jpg" alt="Poisson d'avril">
+            <img src="https://cdn.pixabay.com/photo/2016/03/27/19/41/fish-1288903_1280.jpg" alt="Poisson d'avril">
             <h2>Truite du poisson d'avril</h2>
             <p><strong>Lieu de vie :</strong> Partout où les blagues sont bien accueillies.</p>
             <p><strong>Particularités :</strong> La truite du poisson d'avril est une espèce très rare, connue pour n'apparaître que le 1er avril. Elle est souvent utilisée pour faire des blagues et des farces.</p>
@@ -101,4 +101,3 @@
     </div>
 </body>
 </html>
-
