--- a/loanpage.html
+++ b/loanpage.html
@@ -67,7 +67,7 @@
     </nav>
     <div class="container">
         <div id="fario" class="species">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/39/Brown_trout.jpg" alt="Truite fario">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Brown_trout.jpg/320px-Brown_trout.jpg" alt="Truite fario">
             <h2>Truite fario</h2>
             <p><strong>Lieu de vie :</strong> Rivières et torrents d'Europe.</p>
             <p><strong>Particularités :</strong> La truite fario est caractérisée par sa robe brune avec des points rouges et noirs. Elle est très prisée des pêcheurs pour sa combativité.</p>
@@ -75,7 +75,7 @@
         </div>
         
         <div id="arc-en-ciel" class="species">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/7f/Rainbow_trout_2.jpg" alt="Truite arc-en-ciel">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Rainbow_trout_2.jpg/320px-Rainbow_trout_2.jpg" alt="Truite arc-en-ciel">
             <h2>Truite arc-en-ciel</h2>
             <p><strong>Lieu de vie :</strong> Originaire d'Amérique du Nord, elle est maintenant présente dans le monde entier.</p>
             <p><strong>Particularités :</strong> Cette espèce est reconnaissable à sa bande colorée le long de son flanc. Elle est souvent utilisée pour l'élevage en pisciculture.</p>
@@ -83,7 +83,7 @@
         </div>
         
         <div id="de-mer" class="species">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/Salmo_trutta_trout.jpg" alt="Truite de mer">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Salmo_trutta_trout.jpg/320px-Salmo_trutta_trout.jpg" alt="Truite de mer">
             <h2>Truite de mer</h2>
             <p><strong>Lieu de vie :</strong> Zones côtières et estuaires de l'Atlantique Nord.</p>
             <p><strong>Particularités :</strong> La truite de mer migre entre les eaux douces et salées. Elle est appréciée pour sa chair délicate et sa taille impressionnante par rapport aux autres truites.</p>
