--- a/arthurpage.html
+++ b/arthurpage.html
@@ -56,7 +56,7 @@
     </header>
     <div class="container">
         <div class="cat">
-            <img src="https://images.unsplash.com/photo-1612196268952-8e6e42f3b5b7" alt="Siamois">
+            <img src="https://static.hitek.fr/img/up_m/201044221/chatikirugrimacesphotos1.jpg" alt="Siamois">
             <h2>Siamois</h2>
             <p>Le chat siamois est une race élégante avec un corps mince et une tête en forme de coin. Ils sont très sociaux et aiment être au centre de l'attention. Les siamois sont connus pour leurs yeux bleus vifs et leur robe pointillée.</p>
         </div>
@@ -66,12 +66,12 @@
             <p>Le chat persan est célèbre pour son visage plat et son pelage long et luxuriant. Ce sont des chats calmes et doux qui aiment se détendre dans des environnements paisibles. Les persans nécessitent un toilettage régulier pour maintenir leur fourrure en bon état.</p>
         </div>
         <div class="cat">
-            <img src="https://images.unsplash.com/photo-1592194996308-7b4603f8f0ae" alt="Maine Coon">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRnRYbJbu69AK1hriEZQ_U5U8-yJkiT1IFejR7GOGu6Iw&s" alt="Maine Coon">
             <h2>Maine Coon</h2>
             <p>Le Maine Coon est l'une des plus grandes races de chats domestiques. Ils ont un pelage épais et résistant à l'eau, des oreilles touffues et une queue impressionnante. Ce sont des chats amicaux et intelligents, parfaits pour les familles.</p>
         </div>
         <div class="cat">
-            <img src="https://images.unsplash.com/photo-1615196087113-49f1f614d470" alt="Bengal">
+            <img src="https://images.ctfassets.net/b85ozb2q358o/1YUrilNZj64uhf9WGG8VkE/2a262a41989da5d0a4e691389145c341/bengal_6_pexels-nika-benedictova-15802496.jpg" alt="Bengal">
             <h2>Bengal</h2>
             <p>Le chat Bengal est reconnu pour son apparence sauvage, rappelant celle du léopard. Ils sont très actifs et aiment jouer. Leur pelage est unique avec des motifs de rosettes, de marbrures ou de taches qui leur donnent une allure exotique.</p>
         </div>
@@ -81,7 +81,7 @@
             <p>Le Sphynx est une race sans poils connue pour sa peau douce et ridée et ses grandes oreilles. Ils sont extrêmement affectueux et aiment être proches de leurs propriétaires. Bien qu'ils n'aient pas de fourrure, ils nécessitent des soins réguliers pour leur peau.</p>
         </div>
         <div class="cat">
-            <img src="https://images.pexels.com/photos/1264078/pexels-photo-1264078.jpeg" alt="British Shorthair">
+            <img src="https://www.zoomalia.com/blogz/4870/tout-savoir-sur-exotic-shorthair.jpeg" alt="British Shorthair">
             <h2>British Shorthair</h2>
             <p>Le British Shorthair est une race robuste avec une tête ronde et un pelage dense. Ils sont calmes et faciles à vivre, ce qui en fait de merveilleux animaux de compagnie pour les familles. Leur pelage peut être de différentes couleurs, mais le bleu (gris) est le plus populaire.</p>
         </div>
