--- a/arthurpage.html
+++ b/arthurpage.html
@@ -61,7 +61,7 @@
             <p>Le chat siamois est une race élégante avec un corps mince et une tête en forme de coin. Ils sont très sociaux et aiment être au centre de l'attention. Les siamois sont connus pour leurs yeux bleus vifs et leur robe pointillée.</p>
         </div>
         <div class="cat">
-            <img src="https://st4.depositphotos.com/1594920/25034/i/1600/depositphotos_250345402-stock-photo-persian-cat-sitting-in-front.jpg" alt="Persan">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ94eNGtfRLQwrY7QFIYHvshMx2xzf0l1yoNWZU81MDrw&s" alt="Persan">
             <h2>Persan</h2>
             <p>Le chat persan est célèbre pour son visage plat et son pelage long et luxuriant. Ce sont des chats calmes et doux qui aiment se détendre dans des environnements paisibles. Les persans nécessitent un toilettage régulier pour maintenir leur fourrure en bon état.</p>
         </div>
