--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <li><a href="https://tktttfrere.github.io/sitetd4/arthurpage.html" target="_blank">Lien vers la page Arthur</a></li>
         <li><a href="https://tktttfrere.github.io/sitetd4/loanpage.html" target="_blank">Lien vers la page Loan</a></li>
 		<li><a href="https://tktttfrere.github.io/sitetd4/qiqipage.html" target="_blank">Lien vers la page Qiqi</a></li>
-		<li><a href="https://tktttfrere.github.io/sitetd4/ouasimpage.html" target="_blank">Lien vers la page Ouassim</a></li>
+		<li><a href="https://tktttfrere.github.io/sitetd4/ouassimpage.html" target="_blank">Lien vers la page Ouassim</a></li>
     </ul>
 </body>
 </html>
