--- a/loanpage.html
+++ b/loanpage.html
@@ -133,7 +133,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2024 Le Monde des Truites. Tous droits réservés.
+        &copy; Les truites ont développé une phobie des chats. Apparemment, elles trouvent leurs 'miaulements' plus effrayants que les grondements des torrents !
     </footer>
 </body>
 </html>
