--- a/ouassimpage.html
+++ b/ouassimpage.html
@@ -1,2 +1,113 @@
-hola c'est ouass
-modif depuis le site
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Street Workout</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #333;
+            color: #fff;
+            padding: 1em 0;
+            text-align: center;
+        }
+        nav {
+            text-align: center;
+            background: #444;
+            padding: 0.5em 0;
+        }
+        nav a {
+            color: #fff;
+            margin: 0 15px;
+            text-decoration: none;
+        }
+        .container {
+            padding: 2em;
+        }
+        .section {
+            margin-bottom: 2em;
+        }
+        .section img {
+            max-width: 100%;
+            height: auto;
+        }
+        footer {
+            text-align: center;
+            padding: 1em 0;
+            background: #333;
+            color: #fff;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Street Workout</h1>
+</header>
+
+<nav>
+    <a href="#introduction">Introduction</a>
+    <a href="#benefits">Bénéfices</a>
+    <a href="#exercises">Exercices</a>
+    <a href="#equipment">Équipement</a>
+</nav>
+
+<div class="container">
+
+    <section id="introduction" class="section">
+        <h2>Introduction</h2>
+        <p>Le street workout est une discipline sportive qui combine la musculation et la gymnastique en utilisant principalement le poids du corps. Il se pratique généralement en plein air, dans des parcs ou des espaces dédiés.</p>
+        <img src="https://www.example.com/image1.jpg" alt="Personne faisant du street workout">
+    </section>
+
+    <section id="benefits" class="section">
+        <h2>Bénéfices</h2>
+        <p>Le street workout présente de nombreux avantages, notamment :</p>
+        <ul>
+            <li>Amélioration de la force et de l'endurance</li>
+            <li>Développement de la flexibilité et de l'agilité</li>
+            <li>Accessible à tous, sans nécessité d'abonnement en salle</li>
+            <li>Communauté dynamique et entraide entre pratiquants</li>
+        </ul>
+        <img src="https://www.example.com/image2.jpg" alt="Groupe pratiquant le street workout">
+    </section>
+
+    <section id="exercises" class="section">
+        <h2>Exercices</h2>
+        <p>Quelques exercices populaires en street workout incluent :</p>
+        <ul>
+            <li>Pompes</li>
+            <li>Tractions</li>
+            <li>Dips</li>
+            <li>Muscle-ups</li>
+            <li>Squats</li>
+        </ul>
+        <img src="https://www.example.com/image3.jpg" alt="Exercice de traction">
+    </section>
+
+    <section id="equipment" class="section">
+        <h2>Équipement</h2>
+        <p>Le street workout nécessite peu d'équipement. Voici quelques éléments de base :</p>
+        <ul>
+            <li>Barres de traction</li>
+            <li>Parallèles</li>
+            <li>Anneaux de gymnastique</li>
+            <li>Barres dip</li>
+        </ul>
+        <img src="https://www.example.com/image4.jpg" alt="Équipement de street workout">
+    </section>
+
+</div>
+
+<footer>
+    <p>&copy; 2024 Street Workout. Tous droits réservés.</p>
+</footer>
+
+</body>
+</html>
